syntax = "proto3";

option csharp_namespace = "WebApi.Clients";

service CacheServiceProvider {
	rpc Get		(GetRequest)	returns (GetReply);
	rpc Add		(AddRequest)	returns (AddReply);
	rpc Update	(UpdateRequest) returns (UpdateReply);
	rpc Delete	(DeleteRequest) returns (DeleteReply);
}

message GetRequest {
	string key = 1;
}

message GetReply {
	bool result = 1;
	string key = 2;
	string value = 3;
}

message AddRequest {
	string key = 1;
	string value = 2;
}

message AddReply {
	bool result = 1;
}

message UpdateRequest {
	string key = 1;
	string value = 2;
}

message UpdateReply {
	bool result = 1;
}

message DeleteRequest {
	string key = 1;
}

message DeleteReply {
	bool result = 1;
}